# Minatarium

./: CMakeLists.txt  main.c
Blessing/: BLESSING.md  Blessing.h  BlessingCommon.c  BlessingData.c
Characters/: CHARACTER.md  Character.h  CharacterUtil.c
Entity/: BossEnemy.h  CharacterUtils.c  Characters.h  EliteEnemy.h  Enemy.c  Enemy.h  EnemyData.c  EnemyData.h  EntityStruct.h  NormalEnemy.h  Player.c  Player.h
Game/: Combat.c  Combat.h  GAME.md  Game.h  GameDamage.c  GameLoop.c  GameReward.c
Status/: Attributes.h  STATUS.md  Status.h
Utils/: PanelUtil.c  PanelUtils.c  PanelUtils.h  PrintUtils.c  Save.h  SaveFile.c  UTIL.md  Utils.h
